Improve performance in divisions table rendering; use Vista style for spinboxes in Windows

--- a/explorer/custom_queries.html
+++ b/explorer/custom_queries.html
@@ -349,7 +349,7 @@ preferenced the Greens at 2, while 18.35% did not preference them at all.</p>
 <h3>Numbers with an <code>every()</code> definition</h3>
 
 <p>If an axis definition is <code>every()</code>, with an expression resolving to an integer as its argument, then the axis will consist of all integers
-takes by the expression, state-wide.  This seemed like a useful idea when I wrote it, but I have not found much need for it.  The intention was that, for example,
+taken by the expression, state-wide.  This seemed like a useful idea when I wrote it, but I have not found much need for it.  The intention was that, for example,
 you might be interested in the difference between the Labor and Liberal preference numbers, <code>ALP - LP</code>.  The set of possible values taken by this 
 expression varies with the number of groups on the ballot paper, so you would need an axis definition that updates with it, if you want to compare across
 different states or elections.</p>
